--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contador Seniorzao</title>
+    <script src="./counterComponent.js"></script>
+    <script src="./index.js"></script>
 </head>
 <body>
-    <output id="contador"></output>
+    <output id="contador">aaaa</output>
     <input type="button" id="btnReiniciar" value="Reiniciar">
 </body>
 </html>
